# Stealthy-Terrain-Aware-Reconnaissance-and-Search

./: README.md  REBUTTAL_RESPONSE.md  copyright.txt  plot_sample.py  prepend_copyright.sh  start_docker.sh
src/: init.sh
src/aidtr-autonomy/autonomy_assets/aidtr_locations/ntc/: aerial_thesis_v1_map.yaml  aerial_thesis_v2_map.yaml
src/recon/: README.md  experiments.sh  experiments_multi.sh  experiments_simplesim.sh  robogrid_gascola_dict_gs30_python2.pkl  test_multi.sh  test_mysim.sh
src/recon/assets/gascola/: visibility_cost_aerial.yaml
src/recon/config/: locations_27_map.pkl
src/recon/src/waypoint_planner/: CMakeLists.txt  package.xml  setup.py
src/recon/src/waypoint_planner/config/: default_parameters.yaml  gascola.yaml  lhex2_parameters.yaml  locations_24_map.pkl  locations_27.pkl  locations_30_map.pkl  locations_ypg_4_1.pkl  nats_params.yaml  ypg_exclusion_zone.yaml
src/recon/src/waypoint_planner/launch/: evaluate_policies.launch  evaluate_policies2.launch  simulate_threats4.launch  simulate_threats8.launch  waypoint_planner2.launch  waypoint_planner4.launch
src/recon/src/waypoint_planner/scripts/: autonomy_faker.py  convert_to_search_polygon.py  simulate_crosspose.py  simulate_threats.py  visibility_cost_publisher.py  waypoint_action_client.py
src/recon/src/waypoint_planner/src/waypoint_planner/: NATS.py  a_star_searching_from_two_side.py  polygon_utils.py  waypoint_planner_utils.py
src/recon/src/zone_recon_msgs/: CMakeLists.txt  package.xml
src/recon/src/zone_recon_msgs/msg/: TrackData.msg  TrackDataVector.msg
src/zone_recon/: experiments.sh  experiments_multi.sh  experiments_simplesim.sh  requirements.txt  test.sh  test_mysim.sh  threat_locs.pkl
src/zone_recon/cmake/: CompilerFlags.cmake
src/zone_recon/src/anon-msgs/: CMakeLists.txt  package.xml
src/zone_recon/src/anon-msgs/docker/: Dockerfile
src/zone_recon/src/anon-msgs/msg/: BodyVelocity.msg  FusionMsg.msg  Ins.msg  InstallationAlignment.msg  KvhData.msg  LastDetection.msg  LocalTrack.msg  RobotGoal.msg  RobotObject.msg  SearchPolygon.msg  TrackData.msg  TrackDataVector.msg
src/zone_recon/src/anon_msgs/: CMakeLists.txt  package.xml
src/zone_recon/src/anon_msgs/action/: Autonomy.action
src/zone_recon/src/anon_msgs/msg/: RcvFeedback.msg  RecbotFeedback.msg  SafetyMgrState.msg  TrackSpeed.msg  VehicleStatus.msg
src/zone_recon/src/anon_msgs/srv/: LocalPose.srv  PtzTrigger.srv
src/zone_recon/src/waypoint_planner/: CMakeLists.txt  package.xml
src/zone_recon/src/waypoint_planner/config/: ntc.yaml  ypg.yaml
src/zone_recon/src/waypoint_planner/launch/: convert_to_search_polygon.launch  simulate_threats.launch  simulate_threats2.launch  waypoint_planner.launch  waypoint_planner8.launch
src/zone_recon/src/waypoint_planner/scripts/: autonomy_faker.py  convert_to_search_polygon.py  simulate_crosspose.py  simulate_threats.py  visibility_cost_publisher.py  waypoint_action_client.py
src/zone_recon/src/waypoint_planner/src/waypoint_planner/: a_star_searching_from_two_side.py  active_search.py  polygon_utils.py  waypoint_planner_utils.py
src/zone_recon/src/zone_recon_msgs/msg/: ThreatVector.msg
