<?xml version="1.0"?>
<package format="2">
  <name>waypoint_planner</name>
  <version>0.0.2</version>
  <description>The waypoint_planner package</description>
  <maintainer email="xxx">xxx</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-scikit-learn</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>uuid</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>aidtr_msgs</exec_depend>
  <exec_depend>ros_track_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

</package>
