<?xml version="1.0"?>
<package format="2">
  <name>zone_recon_msgs</name>
  <version>0.1.0</version>
  <description>The zone reconnaissance msgs package</description>
  <maintainer email="nabakshi@andrew.cmu.edu">Nikhil Angad Bakshi</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend> std_msgs </build_depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
